v2.2
 * Remove chrome-internal://newtab/ support
 * Add explicit https:// on sites that support https under quick links
 * Updated fontawesome to 4.0.3
v2.1
 * Fix antiquated mentioning of "Wrench" icon
 * Add chrome://apps as an option
 * Sync improvements for multiple-machine installations
 * Don't display Welcome Page when Chrome updates
v2.0
 * Added welcome page to display on install/upgrade
 * Added option to suppress welcome page on upgrades
 * Changed background page to event page to use less memory
 * Changed from localStorage to chrome.storage.* api,
   default to 'local' namespace
 * Added option to sync options via Chrome Sync
    NOTE: sync will *ONLY* happen after selecting 'Sync' and clicking save.
 * Added 'Apps' button to options page so users can access other installed
   applications and extensions using the original New Tab page
 * Moved most of processing from background.js to options.js and 
   redirect.js to eliminate the need to request background page
 * Fixed incognito mode (side effect of chrome.storage.*)