@@ -1,0 +1,8 @@
+{
+    "name": "Hard-coded redirection new tab page",
+    "description": "Override the new tab page with a redirection that is hard-coded in redirect.html",
+    "version": "1.0",
+    "incognito": "split",
+    "chrome_url_overrides": { "newtab": "redirect.html" },
+    "manifest_version": 2
+}
