@@ -1,0 +1,3 @@
+<head>
+    <meta http-equiv="refresh" content="0;URL=https://plus.google.com">
+</head>
